# registry-platform

./: Cargo.toml  README.md
.github/workflows/: ci.yml  fuzz.yml
crates/registry-platform-audit/: README.md
crates/registry-platform-config/: Cargo.toml  README.md
crates/registry-platform-config/src/: lib.rs
crates/registry-platform-config/tests/: registry_authorization_contract.rs  tuf_local_verifier_contract.rs
crates/registry-platform-crypto/src/: lib.rs
crates/registry-platform-httpsec/tests/: integration.rs
crates/registry-platform-httputil/src/: lib.rs
crates/registry-platform-oid4vci/src/: lib.rs
crates/registry-platform-oidc/src/: lib.rs
crates/registry-platform-ops/src/: lib.rs
crates/registry-platform-ops/tests/: config_governed_apply_contract.rs
crates/registry-platform-replay/: Cargo.toml
crates/registry-platform-replay/src/: lib.rs
crates/registry-platform-testing/: README.md
crates/registry-platform-testing/src/: lib.rs
crates/registry-platform-testing/tests/: cross_crate_integration.rs
docs/: audit-reference-hashing.md  release-review-0.1.2.md
