[package]
name = "registry-platform-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Signed/governed runtime configuration verification contracts for Registry services."
repository.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tough.workspace = true
url.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
